--- a/src/assets/scss/theme/sections/_cta.scss
+++ b/src/assets/scss/theme/sections/_cta.scss
@@ -9,7 +9,8 @@
 .cta-inner {
 	padding-left: 16px;
 	padding-right: 16px;
-    background-color: get-color(primary, 3);
+    // background-color: get-color(primary, 3);
+    background-color: rgba(186, 178, 235, 0.53);
 	background-image: url(../../../images/cta-illustration.svg);
 	background-repeat: no-repeat;
     background-size: cover;
@@ -29,4 +30,12 @@
 		padding-left: 48px;
 		padding-right: 48px;
 	}
+}
+
+.featuredInText {
+    color: white;
+    font-weight: 500px;
+    font-size: 14px;
+    margin-top: -30px;
+    margin-bottom: 10px;
 }
